feat: add instruction section

--- a/www/index.html
+++ b/www/index.html
@@ -192,11 +192,11 @@
                 <div class="item__circle circle__position_top-right"></div>
               </li>
 
-              <li class="benefit__item">              
+              <li class="benefit__item">
                   <div class="item__content">
                     <img src="/img/main__img/benefit_img_money.svg" alt="" class="benefit__img">
                 </img>
-        
+
                   <h2 class="benefit__title">
                   Деньги сразу
                 </h2>
@@ -222,6 +222,47 @@
           </div>
         </div>
       </section>
+
+      <div class="instruction">
+        <div class="instruction__container container">
+          <h2 class="instruction__title">ПРОДАТЬ ВОЛОСЫ ОЧЕНЬ ПРОСТО!</h2>
+          <p class="instruction__subtitle">Продайте свои волосы и получите выгодное вознаграждение всего за три шага</p>
+          <div class="instruction__body">
+            <div class="instruction__card">
+              <div class="card__number">1</div>
+              <div class="card__body">
+                <img src="/img/main__img/card-icon-ruler.svg" alt="" class="card__image">
+                <div class="card__content">
+                  <h3 class="card__title">МЫ ПОКУПАЕМ ВОЛОСЫ ОТ 35 СМ</h3>
+                  <p class="card__text">Измерьте длину волос, которую хотите продать линейкой или рулеткой и если она достигает 35 см, то смело переходите к следующему шагу</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="instruction__card">
+              <div class="card__number">2</div>
+              <div class="card__body">
+                <img src="/img/main__img/card-icon-rate.svg" alt="" class="card__image">
+                <div class="card__content">
+                  <h3 class="card__title">ОНЛАЙН ОЦЕНКА</h3>
+                  <p class="card__text">Сделайте фото расмущенных волос со спины и отправьте его нам на оценку в мессенджеры</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="instruction__card">
+              <div class="card__number">3</div>
+              <div class="card__body">
+                <img src="/img/main__img/card-icon-money.svg" alt="" class="card__image">
+                <div class="card__content">
+                  <h3 class="card__title">ПОКУПКА ВОЛОС</h3>
+                  <p class="card__text">Договариваемся с вами о цене волос и приглашаем Вас на проведение среза</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </main>
     <!-- <div class="background__image">
